--- a/templates/index.html
+++ b/templates/index.html
@@ -333,13 +333,13 @@ cursor: pointer;
 			     <div class="tab_menu">
 				    <ul>
 					   <li><a href="#"><span class="icon"><img src="/static/images/i1.png" alt="#" /></span><span>Training</span></a></li>
-					   <li><a href="#"><span class="icon"><img src="/static/images/i2.png" alt="#" /></span><span> BPO</span></a></li>
-					   <li><a href="#"><span class="icon"><img src="/static/images/i3.png" alt="#" /></span><span>KPO</span></a></li>
-					   <li><a href="#"><span class="icon"><img src="/static/images/i4.png" alt="#" /></span><span> OVERSEAS CONSULTANT</span></a></li>
-					   <li><a href="https://wa.me/917904317803/?text= Hai 3 Whistle , "><span class="icon"><img src="/static/images/i5.png" alt="#" /></span><span>Whatsapp</span></a></li>
-					   <li><a href="mailto:ceo@ownustech.in subject="Joining in Test""><span class="icon"><img src="/static/images/i6.png" alt="#" /></span><span>Email</span></a></li>
-					   <li><a href="tel:+917904317803"><span class="icon"><img src="/static/images/i7.png" alt="#" /></span><span>Call us</span></a></li>
-					</ul>
+             <li><a href="#"><span class="icon"><img src="/static/images/bpo1.png" alt="#" width="60" height="70"/></span><span> BPO</span></a></li>
+            <li><a href="#"><span class="icon"><img src="/static/images/kpo1.png" alt="#" width="60" height="70"/></span><span>KPO</span></a></li>
+            <li><a href="#"><span class="icon"><img src="/static/images/o1.png" alt="#" width="60" height="70"/></span><span style="font-size:13px">OVERSEAS CONSULTANT</span></a></li>
+      <li style="float:left"><a href="https://wa.me/917904317803/?text= Hai 3 Whistle , "><span class="icon"><img src="/static/images/i5.png" alt="#" /></span><span>Whatsapp</span></a></li>
+            <li style="float:left"><a href="mailto:ceo@ownustech.in subject="Joining in Test""><span class="icon"><img src="/static/images/i6.png" alt="#" /></span><span>Email</span></a></li>
+            <li style="float:left"><a href="tel:+917904317803"><span class="icon"><img src="/static/images/i7.png" alt="#" /></span><span>Call us</span></a></li>
+       	</ul>
 				 </div>
 			  </div>
 		  </div>
