--- a/templates/index.html
+++ b/templates/index.html
@@ -292,7 +292,7 @@ cursor: pointer;
         <div class="container-fluid">
             <div class="row">
                 <div class="pogoSlider" id="js-main-slider">
-                    <div class="pogoSlider-slide" style="background-image:url(static/images/banner_img.png);">
+                    <div class="pogoSlider-slide" style="background-image:url(static/images/m.gif);">
                         <div class="container">
                             <div class="row">
                                 <div class="col-md-12">
@@ -305,7 +305,7 @@ cursor: pointer;
                             </div>
                         </div>
                     </div>
-                    <div class="pogoSlider-slide" style="background-image:url(static/images/banner_img.png);">
+                    <div class="pogoSlider-slide" style="background-image:url(static/images/m1.gif);">
                         <div class="container">
                             <div class="row">
                                 <div class="col-md-12">
@@ -332,13 +332,14 @@ cursor: pointer;
 		      <div class="col-md-12">
 			     <div class="tab_menu">
 				    <ul>
-					   <li><a href="#"><span class="icon"><img src="/static/images/i1.png" alt="#" /></span><span>Training</span></a></li>
-             <li><a href="#"><span class="icon"><img src="/static/images/bpo1.png" alt="#" width="60" height="70"/></span><span> BPO</span></a></li>
-            <li><a href="#"><span class="icon"><img src="/static/images/kpo1.png" alt="#" width="60" height="70"/></span><span>KPO</span></a></li>
-            <li><a href="#"><span class="icon"><img src="/static/images/o1.png" alt="#" width="60" height="70"/></span><span style="font-size:13px">OVERSEAS CONSULTANT</span></a></li>
+					   <li><a href="#service"><span class="icon"><img src="/static/images/i1.png" alt="#" /></span><span>Training</span></a></li>
+             <li><a href="#service"><span class="icon"><img src="/static/images/bpo1.png" alt="#" width="70" height="70"/></span><span> BPO</span></a></li>
+            <li><a href="#service"><span class="icon"><img src="/static/images/kpo1.png" alt="#" width="70" height="70"/></span><span>KPO</span></a></li>
+            <li><a href="#service"><span class="icon"><img src="/static/images/o1.png" alt="#" width="70" height="70"/></span><span style="font-size:13px">OVERSEAS CONSULTANT</span></a></li>
       <li style="float:left"><a href="https://wa.me/917904317803/?text= Hai 3 Whistle , "><span class="icon"><img src="/static/images/i5.png" alt="#" /></span><span>Whatsapp</span></a></li>
-            <li style="float:left"><a href="mailto:ceo@ownustech.in subject="Joining in Test""><span class="icon"><img src="/static/images/i6.png" alt="#" /></span><span>Email</span></a></li>
+
             <li style="float:left"><a href="tel:+917904317803"><span class="icon"><img src="/static/images/i7.png" alt="#" /></span><span>Call us</span></a></li>
+            <li style="float:left"><a href="#Location"><span class="icon"><img src="/static/images/l.png" alt="#Location" /></span><span>Location</span></a></li>
        	</ul>
 				 </div>
 			  </div>
@@ -366,8 +367,8 @@ cursor: pointer;
 
                         </div>
 						<div class="full">
-              <h2><span></span><b>We Are Creator's / Designer's</b></h2>
-            <p>Victory Ventura Global Services is devising, designing and creators on Web and Mobile App developments, IoT and Cloud, Data Science Services such as leveraging Artificial Intelligence and Machine Learning Technologies to build higher value technical solutions worldwide.</p>
+
+            <p>Outsourcing is a strategic choice for organizations looking get their own resources to focus on strategy, governance, ownership of core processes and cost efficiencies. Outsourcing increases capabilities and helps achieve competitive advantage.</p>
 
 
 
@@ -408,7 +409,8 @@ cursor: pointer;
                     </div>
 
                     <h3 class="title">TRAINING </h3>
-                    <p class="description">Lorem ipsum dolor sit amet conse ctetur adipisicing elit. Qui quaerat fugit quas veniam perferendis repudiandae sequi, dolore quisquam illum.</p>
+                    <p class="description">Software Training is here to stay as long as organizations are driven by the need to save time and cost by digitizing the tasks for themselves and all their stakeholders ranging from customers to vendors to business partners.
+</p>
                 </div>
             </div>
             <div class="col-md-3 col-sm-6">
@@ -419,7 +421,7 @@ cursor: pointer;
                         <span><i>  <img src="/static/images/bpo.png" alt="#" width="50" height="50" /></i></span>
                     </div>
                     <h3 class="title">BPO</h3>
-                    <p class="description">Lorem ipsum dolor sit amet conse ctetur adipisicing elit. Qui quaerat fugit quas veniam perferendis repudiandae sequi, dolore quisquam illum.</p>
+                    <p class="description">Business process outsourcing (BPO) is a business practice in which an organization contracts with an external service provider to perform an essential business task.</p>
                 </div>
             </div>
             <div class="col-md-3 col-sm-6">
@@ -430,7 +432,7 @@ cursor: pointer;
                         <span><i>  <img src="/static/images/kpo.png" alt="#" width="50" height="50" /></i></span>
                     </div>
                     <h3 class="title">KPO</h3>
-                    <p class="description">Lorem ipsum dolor sit amet conse ctetur adipisicing elit. Qui quaerat fugit quas veniam perferendis repudiandae sequi, dolore quisquam illum.</p>
+                    <p class="description">Knowledge process outsourcing describes the outsourcing of core information-related business activities which are competitively important or form an integral part of a company's value chain.</p>
                 </div>
             </div>
             <div class="col-md-3 col-sm-6">
@@ -441,7 +443,7 @@ cursor: pointer;
                       <span><i>  <img src="/static/images/co.png" alt="#" width="50" height="50" /></i></span>
                     </div>
                     <h3 class="title">OVERSEAS CONSULTANT</h3>
-                    <p class="description">Lorem ipsum dolor sit amet conse ctetur adipisicing elit. Qui quaerat fugit quas veniam perferendis repudiandae sequi, dolore quisquam illum.</p>
+                    <p class="description">The manpower we provide is highly professional and has knowledge of basic art of functioning in organizations like yours.</p>
                 </div>
             </div>
         </div>
@@ -471,7 +473,9 @@ cursor: pointer;
 						<div class="full">
 
               <br>
-               <p>With Victory Ventura Global Services, you can get a secure and steady development especially in IT sector-based projects developing and updating with the latest technologies. Because we are always aware of Changes in customer behaviors which make business development vital. In, this way we provide service support, guidance’s for the startup, lift-off in the IT firms, and other business ventures. As a responsible corporate, we proudly say your one-stop destination for your company or business development is Victory Ventura Global Services.</p>
+               <p>Victory Ventura Global Services is growing company focused on providing Business Process Outsourcing (BPO) services and Knowledge Process Outsourcing (KPO) services for domestic and global corporations.
+               We combine process execution excellence, flexible and creative client partnership models, business transformation capabilities, and cost effective high quality services to support our clients.
+</p>
 </div>
 					  </div>
                 </div>
@@ -629,7 +633,7 @@ cursor: pointer;
               <br><br>
                 <br><br>
 
-
+<h1 style="color:yellow">Contact : Mr. Prasanth CEO</h1>
               <br>
 <a href="tel:+917904317803"><button class="btn"><i class="fa fa-phone" style="font-size:26px"></i>  Call</button></a>
 <a href="https://wa.me/917904317803/?text= Hai 3 Whistle , "><button class="btn"><i class="fa fa-whatsapp" style="font-size:26px"></i>  Whatsapp</button></a>
@@ -665,7 +669,45 @@ cursor: pointer;
                </div>
            </div>
         </div>
-	<!-- end section -->
+        <div id="Location" class="Location">
+          <div class="section layout_padding padding_bottom-0">
+              <div class="container">
+                  <div class="row">
+                      <div class="col-md-6">
+
+                          <div class="full">
+                            <div class="heading_main text_align_left">
+                          <h2><span>Address / Location</span></h2>
+                            </div>
+                            <br>
+                            <br>
+                                        <br>
+<br>
+                          <h2>Location : Ambattur, Chennai, Tamil Nadu</h2>
+
+
+                          </div>
+                      </div>
+              <div class="col-md-6">  <div class="full">
+
+
+                                                                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31085.518485027525!2d80.13109638722445!3d13.118826458589611!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a5263ba9a487b3f%3A0x1e923f00f5206296!2sAmbattur%2C%20Chennai%2C%20Tamil%20Nadu!5e0!3m2!1sen!2sin!4v1630142586371!5m2!1sen!2sin" width="500" height="400" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+
+
+                </div>
+
+                      </div>
+                  </div>
+              </div>
+          </div>
+              </div>
+              <br>
+                          <br>
+                          <br>
+                                      <br>
+
+
+  <!-- end section -->
 
 
     <div class="footer_bottom">
