--- a/static/css/style.css
+++ b/static/css/style.css
@@ -185,7 +185,7 @@ button:focus {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	background: #d3e0f1;
+	background: #f8f8f8;
 }
 
 .loader {
