--- a/templates/index.html
+++ b/templates/index.html
@@ -292,7 +292,7 @@ cursor: pointer;
         <div class="container-fluid">
             <div class="row">
                 <div class="pogoSlider" id="js-main-slider">
-                    <div class="pogoSlider-slide" style="background-image:url(static/images/m.gif);">
+                    <div class="pogoSlider-slide" style="background-image:url(static/images/m1.JPG);">
                         <div class="container">
                             <div class="row">
                                 <div class="col-md-12">
@@ -305,7 +305,7 @@ cursor: pointer;
                             </div>
                         </div>
                     </div>
-                    <div class="pogoSlider-slide" style="background-image:url(static/images/m1.gif);">
+                    <div class="pogoSlider-slide" style="background-image:url(static/images/m2.JPG);">
                         <div class="container">
                             <div class="row">
                                 <div class="col-md-12">
@@ -336,9 +336,9 @@ cursor: pointer;
              <li><a href="#service"><span class="icon"><img src="/static/images/bpo1.png" alt="#" width="70" height="70"/></span><span> BPO</span></a></li>
             <li><a href="#service"><span class="icon"><img src="/static/images/kpo1.png" alt="#" width="70" height="70"/></span><span>KPO</span></a></li>
             <li><a href="#service"><span class="icon"><img src="/static/images/o1.png" alt="#" width="70" height="70"/></span><span style="font-size:13px">OVERSEAS CONSULTANT</span></a></li>
-      <li style="float:left"><a href="https://wa.me/917904317803/?text= Hai 3 Whistle , "><span class="icon"><img src="/static/images/i5.png" alt="#" /></span><span>Whatsapp</span></a></li>
+      <li style="float:left"><a href="https://wa.me/919176416567/?text= Hai 3 Whistle , "><span class="icon"><img src="/static/images/i5.png" alt="#" /></span><span>Whatsapp</span></a></li>
 
-            <li style="float:left"><a href="tel:+917904317803"><span class="icon"><img src="/static/images/i7.png" alt="#" /></span><span>Call us</span></a></li>
+            <li style="float:left"><a href="tel:+919176416567"><span class="icon"><img src="/static/images/i7.png" alt="#" /></span><span>Call us</span></a></li>
             <li style="float:left"><a href="#Location"><span class="icon"><img src="/static/images/l.png" alt="#Location" /></span><span>Location</span></a></li>
        	</ul>
 				 </div>
@@ -636,7 +636,7 @@ cursor: pointer;
 <h1 style="color:yellow">Contact : Mr. Prasanth CEO</h1>
               <br>
 <a href="tel:+917904317803"><button class="btn"><i class="fa fa-phone" style="font-size:26px"></i>  Call</button></a>
-<a href="https://wa.me/917904317803/?text= Hai 3 Whistle , "><button class="btn"><i class="fa fa-whatsapp" style="font-size:26px"></i>  Whatsapp</button></a>
+<a href="https://wa.me/+919176416567/?text= Hai 3 Whistle , "><button class="btn"><i class="fa fa-whatsapp" style="font-size:26px"></i>  Whatsapp</button></a>
 <a href="mailto:ceo@ownustech.in subject="Joining in Test""><button class="btn"><i class="fa fa-envelope" style="font-size:26px"></i>  Gmail</button></a>
 
 
@@ -690,8 +690,7 @@ cursor: pointer;
                       </div>
               <div class="col-md-6">  <div class="full">
 
-
-                                                                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31085.518485027525!2d80.13109638722445!3d13.118826458589611!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a5263ba9a487b3f%3A0x1e923f00f5206296!2sAmbattur%2C%20Chennai%2C%20Tamil%20Nadu!5e0!3m2!1sen!2sin!4v1630142586371!5m2!1sen!2sin" width="370" height="400" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31085.518485027525!2d80.13109638722445!3d13.118826458589611!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a5263ba9a487b3f%3A0x1e923f00f5206296!2sAmbattur%2C%20Chennai%2C%20Tamil%20Nadu!5e0!3m2!1sen!2sin!4v1630142586371!5m2!1sen!2sin" width="370" height="400" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
 
 
                 </div>
