--- a/templates/index.html
+++ b/templates/index.html
@@ -336,7 +336,7 @@ cursor: pointer;
              <li><a href="#service"><span class="icon"><img src="/static/images/bpo1.png" alt="#" width="70" height="70"/></span><span> BPO</span></a></li>
             <li><a href="#service"><span class="icon"><img src="/static/images/kpo1.png" alt="#" width="70" height="70"/></span><span>KPO</span></a></li>
             <li><a href="#service"><span class="icon"><img src="/static/images/o1.png" alt="#" width="70" height="70"/></span><span style="font-size:13px">OVERSEAS CONSULTANT</span></a></li>
-      <li style="float:left"><a href="https://wa.me/919176416567/?text= Hai 3 Whistle , "><span class="icon"><img src="/static/images/i5.png" alt="#" /></span><span>Whatsapp</span></a></li>
+      <li style="float:left"><a href="https://wa.me/919176416567/?text= Hai VICTORY VENTURA GLOBAL SERVICES , "><span class="icon"><img src="/static/images/i5.png" alt="#" /></span><span>Whatsapp</span></a></li>
 
             <li style="float:left"><a href="tel:+919176416567"><span class="icon"><img src="/static/images/i7.png" alt="#" /></span><span>Call us</span></a></li>
             <li style="float:left"><a href="#Location"><span class="icon"><img src="/static/images/l.png" alt="#Location" /></span><span>Location</span></a></li>
@@ -635,8 +635,9 @@ cursor: pointer;
 
 <h1 style="color:yellow">Contact : Mr. Prasanth CEO</h1>
               <br>
-<a href="tel:+917904317803"><button class="btn"><i class="fa fa-phone" style="font-size:26px"></i>  Call</button></a>
-<a href="https://wa.me/+919176416567/?text= Hai 3 Whistle , "><button class="btn"><i class="fa fa-whatsapp" style="font-size:26px"></i>  Whatsapp</button></a>
+
+<a href="tel:+919176416567"><button class="btn"><i class="fa fa-phone" style="font-size:26px"></i>  Call</button></a>
+<a href="https://wa.me/+919176416567/?text= Hai, VICTORY VENTURA GLOBAL SERVICES "><button class="btn"><i class="fa fa-whatsapp" style="font-size:26px"></i>  Whatsapp</button></a>
 <a href="mailto:ceo@ownustech.in subject="Joining in Test""><button class="btn"><i class="fa fa-envelope" style="font-size:26px"></i>  Gmail</button></a>
 
 
